--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,15 +1,9 @@
-<!-- templates/registration/login.html -->
-
 {% extends "base.html" %}
-
-{% block title %}Вход{% endblock %}
-
 {% block content %}
-<h2>Войти в аккаунт</h2>
+<h2>Вход в аккаунт</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Войти</button>
 </form>
-<p>Нет аккаунта? <a href="{% url 'register_tutor' %}">Стать преподавателем</a></p>
 {% endblock %}
